# mlx-router

./: .gitignore  AGENTS.md  AGENTS_INTEGRATION.md  CHANGELOG.md  INSTALL_TEST.md  README.md  com.henrybravo.mlx-router.plist  config.json  install-launchd.sh  main.py  mlx_downloader.py  mlx_router.py  pyproject.toml  requirements.txt  uninstall-launchd.sh
.github/workflows/: ci.yml  publish.yml
agents/: ollama_chat_completion.py
agents/microsoft-agent-framework/: .env-example  README.md  requirements.txt
agents/microsoft-agent-framework/agent-declarations/: AzureOpenAIResponses.yaml  MicrosoftLearnAgent.yaml  OpenAIAssistants.yaml  OpenAIChat.yaml  OpenAIResponses.yaml  chatclient_GetWeather.yaml
agents/microsoft-agent-framework/agents/: azure_openai_responses_agent.py  get_weather_agent.py  inline_yaml.py  microsoft_learn_agent.py  openai_responses_agent.py
agents/semantic-kernel/: HandlebarsPrompt.yaml  recipes.md  recipes.txt  sk-optimize_language_model_prompts-with-streaming.py  sk-optimize_language_model_prompts.py  sk_carnivore-recipes.py  sk_chat_history_demo.py  sk_handlebars_prompt_demo.py  sk_ollama_chat_completion.py  sk_prompt_template_demo.py
agents/strands/: agent_with_system.py  conversation_memory.py  minimal_agent.py  mlx_model.py  requirements.txt
docs/: AGENTS_INTEGRATION.md  CHANGELOG.md  INSTALL_TEST.md
helper_tools/: benchmark_results_DeepSeek-R1-0528-Qwen3-8B-8bit_20250607_171017.json  benchmark_results_Llama-3.3-70B-Instruct-8bit_20250806_112518.json  discovered_configs_DeepSeek-R1-0528-Qwen3-8B-8bit.json  discovered_configs_Llama-3.2-3B-Instruct-4bit.json  discovered_configs_Llama-3.3-70B-Instruct-6bit.json  discovered_configs_Llama-3.3-70B-Instruct-8bit.json  discovered_configs_Qwen3.5-35B-A3B-MLX-6.5bit.json  discovered_configs_glm-4-9b-chat-1m-bf16.json  discovered_configs_gpt-oss-120b-MXFP4-Q8.json  mlx_downloader.py  mlx_lmstudio_directory_linker.py  mlx_lmstudio_linker.py  mlx_model_parameter_discovery_tool.py
images/: mlx-router-help-menu.png-old
mlx_router/: __version__.py  cli.py
mlx_router/api/: app.py
mlx_router/config/: model_config.py
mlx_router/core/: __init__.py  content.py  manager.py  model_manager.py  patterns.py  resource_monitor.py  templates.py
tests/: test_chat.py  test_chat_templates.py  test_memory_pressure.py  test_model_config.py  test_models.sh  test_suite.py  test_vision_model.py
