[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-router"
version = "2.3.1"
description = "OpenAI-compatible inference server for Apple Silicon — hot-swap MLX models, stream responses, process images and PDFs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Henry Bravo", email = "info@henrybravo.nl" },
]
keywords = [
    "mlx", "apple-silicon", "llm", "inference-server",
    "openai-compatible", "fastapi", "mlx-lm", "mlx-vlm",
    "moe", "local-llm", "macos",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Environment :: MacOS X",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "mlx-vlm>=0.4.0",
    "huggingface-hub>=1.2.0",
    "pyfiglet>=1.0.0",
    "psutil>=7.0.0",
    "fastapi[all]>=0.115.0",
    "jsonschema>=4.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/henrybravo/mlx-router"
Repository = "https://github.com/henrybravo/mlx-router"
Issues = "https://github.com/henrybravo/mlx-router/issues"
Changelog = "https://github.com/henrybravo/mlx-router/releases"

[project.scripts]
mlx-router = "mlx_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mlx_router"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["N806", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
